# bandao

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: admin-web.yml  api.yml  app.yml
admin-web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.vue  nginx.conf  nuxt.config.ts  package.json  pnpm-lock.yaml
admin-web/assets/css/: main.css
admin-web/components/: OrgCreateForm.vue  OrgJoinForm.vue  OrgSwitcher.vue
admin-web/composables/: useApi.ts  useApiTokens.ts  useAppUsers.ts  useAuth.ts  useCheckin.ts  useExternalAuth.ts  useJoinRequests.ts  useLegacyBackfill.ts  useLocationPings.ts  useOrgSettings.ts  useOrgSlug.ts  useOrgTime.ts
admin-web/layouts/: default.vue
admin-web/middleware/: auth.ts  guest.ts
admin-web/pages/: cooldowns.vue  download.vue  forgot-password.vue  index.vue  login.vue  members.vue  no-org.vue  privacy.vue  register.vue  reset-password.vue
admin-web/pages/admin/: join-requests.vue
admin-web/pages/app-users/: index.vue
admin-web/pages/checkin/: [appUserId].vue  index.vue
admin-web/pages/orgs/: join.vue  new.vue
admin-web/pages/settings/: api-tokens.vue  auth.vue  legacy-backfill.vue
admin-web/test/: README.md
admin-web/test/composables/: useJoinRequests.test.ts  useLocationPings.test.ts
admin-web/test/pages/: download.test.ts  privacy.test.ts  trajectory.test.ts
admin-web/test/utils/: orgTimeRange.test.ts  timeOfDayColor.test.ts
admin-web/types/: api.ts
admin-web/utils/: orgTimeRange.ts  timeOfDayColor.ts
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  entrypoint.sh
api/examples/: legacy_backfill.rs
api/src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs
api/src/auth/: api_token.rs  app_extractor.rs  app_password.rs  extractor.rs  middleware.rs  mod.rs  org_code.rs  password.rs  secret_box.rs  session_token.rs  slug.rs
api/src/auth/providers/: internal.rs  mod.rs  mssql.rs
api/src/db/: app_sessions.rs  app_users.rs  checkin_events.rs  checkin_user_status.rs  dashboard_memberships.rs  dashboard_sessions.rs  dashboard_users.rs  join_requests.rs  legacy_backfill_jobs.rs  location_pings.rs  mod.rs  org_api_tokens.rs  orgs.rs  password_reset_tokens.rs  removed_memberships.rs  slug_reservations.rs
api/src/handlers/: app_auth.rs  app_checkin.rs  app_dto.rs  app_users.rs  auth.rs  checkin.rs  checkin_dto.rs  checkin_export.rs  external_auth.rs  join_requests.rs  legacy_backfill.rs  location_tracking.rs  me.rs  mod.rs  org_api_tokens.rs  orgs.rs  users.rs
api/src/services/: email.rs  legacy_backfill.rs  mod.rs  reverse_geocoder.rs  timezone.rs  utc_offset.rs
api/src/services/legacy_backfill/: mod.rs  provider.rs  worker.rs
api/tests/: app_auth_login.rs  app_auth_login_lockout.rs  app_auth_logout.rs  app_me.rs  app_me_password.rs  app_needs_password_change_gate.rs  app_users_create.rs  app_users_list.rs  app_users_password_reset.rs  app_users_update.rs  auth_login.rs  auth_login_lockout.rs  auth_logout.rs  auth_register.rs  auth_register_by_grace_slug.rs  auth_register_by_slug.rs  auth_register_cooldown.rs  auth_role_lookup_per_request.rs  checkin_admin_views.rs  checkin_app_user_status_init.rs  checkin_appuser_scope.rs  checkin_dual_timestamps.rs  checkin_events_export_query.rs  checkin_export_endpoint.rs  checkin_force_checkout.rs  checkin_geocoding_failsoft.rs  checkin_multi_site.rs  checkin_out_of_order.rs  checkin_state_lock.rs  checkin_state_machine.rs  checkin_transfer_toggle.rs  external_auth_config.rs  external_auth_login.rs  external_auth_sync.rs  forgot_password.rs  healthz.rs  join_requests_admin.rs  join_requests_cancel.rs  join_requests_me.rs  legacy_backfill_import.rs  (+26 more)
api/tests/common/: mod.rs
app/: .gitignore  .tool-versions  README.md  analysis_options.yaml  pubspec.yaml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts  google-services.json
app/integration_test/: screenshot_test.dart
app/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/app/: argus_app.dart  bandao_app.dart  router.dart
app/lib/l10n/: app_en.arb  app_localizations.dart  app_zh.arb  app_zh_TW.arb
app/scripts/: release_ios.sh  reset_appuser_password.sh  take_android_screenshots.sh  take_screenshots.sh  upload_ios.sh
app/store_metadata/android/: contact_email.txt  full_description.txt  privacy_policy_url.txt  short_description.txt
app/store_metadata/ios/: description.txt  keywords.txt  marketing_url.txt  promotional_text.txt  support_url.txt
app/test/: widget_test.dart
app/test/app/: router_test.dart
app/test/helpers/: fake_auth_notifier.dart  (+1 more)
app/test_driver/: integration_driver.dart
infra/mongo-host/: README.md  bandao-backup.service  bandao-backup.sh  bandao-backup.timer  bandao-restore-drill.sh
integrations/zhengdan-checkin-export/: .gitignore  README.md  config.example.ps1  export.ps1  register-task.ps1  unregister-task.ps1
(+333 files in other folders)
