[package]
name = "bandao-api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "bandao-api"
path = "src/main.rs"

[dependencies]
# async runtime + web
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# observability + config
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# domain / data layer
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
argon2 = "0.5"
nanoid = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"

# utilities
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lru = "0.12"

# xlsx export (admin location-tracking export endpoint). Pure Rust, no native deps.
rust_xlsxwriter = "0.79"

# symmetric encryption for external-auth DB connection passwords at rest
chacha20poly1305 = "0.10"

# SHA-256 hashing for org API tokens at rest (high-entropy random secrets —
# a fast hash is correct here, unlike argon2 for human passwords)
sha2 = "0.10"

# MSSQL driver for external-database App-user auth (tiberius over tokio via compat)
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "test-util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo", "mssql_server"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde_json = "1"
# external-auth integration test seeds a real MSSQL container directly
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
# MSSQL containers each need real RAM to start (see `#[serial(mssql)]` on
# every MSSQL-backed test) — running several concurrently reliably fails
# with "Could not allocate initial 5000 lock owner blocks during startup."
serial_test = "3"

[profile.dev]
opt-level = 0
debug = 1

# Dev builds keep our own code unoptimized for fast iteration, but third-party
# dependencies (especially argon2 / sha / hmac) are crippling under opt-level=0.
# Building deps at full optimization is a one-shot cost that makes cargo run
# behave close to release for hot paths.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
